[tool.poetry]
name = "ai-intern"
version = "0.1.0"
description = ""
authors = ["Fardeem Munir <munirfardeem@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
modal-client = "^0.49.2348"
tiktoken = "^0.4.0"
openai = "^0.27.8"
autopep8 = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
